clipping issues fixed

--- a/artist/src/css/Header.css
+++ b/artist/src/css/Header.css
@@ -67,8 +67,10 @@ header li:nth-of-type(1)::before{
     header ul {
         display: none;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         position: absolute;
-        top: 100px; /* Adjust based on your header height */
+        top: 80px; /* Adjust based on your header height */
         left: 0;
         width: 100%;
         background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
@@ -96,7 +98,7 @@ header li:nth-of-type(1)::before{
 /* Adjust for very small screens */
 @media (max-width: 480px) {
     header ul {
-        top: 80px; /* Adjust based on your header height */
+        top: 117px; /* Adjust based on your header height */
     }
 
     header li {
